Narrator reports the title of the document when moving by word or character out of a link
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr128 | --- | unaffected |
| firefox137 | --- | unaffected |
| firefox138 | --- | disabled |
| firefox139 | --- | disabled |
| firefox140 | --- | disabled |
| firefox141 | --- | verified |
| firefox142 | --- | verified |
People
(Reporter: Jamie, Assigned: Jamie)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Spun off bug 1950535 comment 6.
STR:
- Ensure Firefox UIA is enabled: about:config, set accessibility.uia.enable to 2.
- Turn on Narrator.
- Open: https://example.com/
- Press control+end to move to the last line of the document. Narrator should say: "More information"
- Press control+leftArrow to move to the previous word.
- Expected: Narrator should say: "permission"
- Actual: Narrator says: "Example Domain"
I apparently regressed this in bug 1951573:
8:52.42 INFO: Last good revision: ea634003c48cb1ab307649baf8fb18476a0e14c6
8:52.42 INFO: First bad revision: 23a8b787c70c3a31c483006679653b2cdc13b300
8:52.42 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ea634003c48cb1ab307649baf8fb18476a0e14c6&tochange=23a8b787c70c3a31c483006679653b2cdc13b300
I think the problem is that setting the caret ends up setting the focus to the document, which is apparently problematic for Narrator. 😒 That said, I can't seem to reproduce that outside of Narrator just yet, which is weird.
Comment 1•11 months ago
|
||
Set release status flags based on info from the regressing bug 1951573
| Assignee | ||
Updated•11 months ago
|
Updated•10 months ago
|
Updated•10 months ago
|
| Assignee | ||
Comment 3•9 months ago
|
||
In bug 1951573, I unified the code for setting the caret.
This includes focusing the node at the caret.
Unfortunately, Windows Narrator behaves badly if the focus is changed as a result of setting the caret.
Chromium doesn't move the focus if the caret is moved via UIA, even though it does for caret navigation like Firefox.
ATK in particular still wants the focus to be changed.
Therefore, add an aSetFocus argument to TextLeafRange::SetSelection so this can be configured by the caller.
Change UIA to specify aSetFocus = false.
| Assignee | ||
Comment 4•9 months ago
|
||
Updated•9 months ago
|
Updated•9 months ago
|
Comment 7•9 months ago
|
||
Reproducible on a 2025-04-07 Firefox Nightly build on Windows 10.
Verified as fixed on Firefox Nightly 142.0a1 and Firefox 141.0b2 on Windows 10 and Windows 11.
Description
•