Bug 1958766: Don't change the focus when moving the caret with UIA. r=eeejay

In bug 1951573, I unified the code for setting the caret.
This includes focusing the node at the caret.
Unfortunately, Windows Narrator behaves badly if the focus is changed as a result of setting the caret.
Chromium doesn't move the focus if the caret is moved via UIA, even though it does for caret navigation like Firefox.
ATK in particular still wants the focus to be changed.
Therefore, add an aSetFocus argument to TextLeafRange::SetSelection so this can be configured by the caller.
Change UIA to specify aSetFocus = false.

Differential Revision: https://phabricator.services.mozilla.com/D252030