accessible/ipc/DocAccessibleChild.h
@@ -97,7 +97,7 @@ class DocAccessibleChild : public PDocAccessibleChild {
   virtual mozilla::ipc::IPCResult RecvSetTextSelection(
       const uint64_t& aStartID, const int32_t& aStartOffset,
       const uint64_t& aEndID, const int32_t& aEndOffset,
-      const int32_t& aSelectionNum) override;
+      const int32_t& aSelectionNum, const bool& aSetFocus) override;
 
   MOZ_CAN_RUN_SCRIPT_BOUNDARY
   virtual mozilla::ipc::IPCResult RecvScrollTextLeafRangeIntoView(
